kubernasty/manifests/crust/longhorn/ingresses/longhorn-dashboard.https.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-in
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-clusteradmin-auth-mw@kubernetescrd

spec:
  rules:
  - host: longhorn.${clusterTld}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
  tls:
    - secretName: micahrl-dot-me-wildcard-backing-secret
      hosts:
        - longhorn.${clusterTld}
